# icu4rb

./: .gitignore  AGENTS.md  Gemfile  README.md  Rakefile  icu4rb.gemspec  simple_test.rb
examples/: basic_usage.rb
ext/icu4rb/: CMakeLists.txt  icu4rb.cpp
lib/: icu4rb.rb
lib/icu4rb/: version.rb
sig/: icu4rb.rbs
spec/: icu4rb_spec.rb  spec_helper.rb
test/: icu4rb_test.rb  message_formatter_date_test.rb  message_formatter_number_test.rb  message_formatter_plural_test.rb  message_formatter_select_test.rb  test_helper_library_test_case.rb
